--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -35,10 +35,11 @@ nav ul li a:hover {
 #navbar {
   background: var(--color-secondary);
 }
-.sidenav {
+.side-nav {
   background-color: var(--color-secondary);
+  width: 15rem;
 }
-.sidenav li {
+.side-nav li {
   text-align: center;
   margin: 1rem 0;
 }
